--- a/src/styles/canvas.css
+++ b/src/styles/canvas.css
@@ -1,8 +1,24 @@
-canvas{
-    margin-top: 5px;
-    margin-left: 5px;
-    width: 400px;
-    height: 400px;
-    border: 2px solid black;
-    touch-action: none;
+.canvas-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-right: 1px solid #ddd;
+  background-color: #fff;
+}
+
+canvas {
+  width: 100%;
+  max-width: 600px;
+  height: 400px;
+  border: none;
+  border-radius: 0;
+  touch-action: none;
+  box-shadow: none;
+}
+
+@media (max-width: 768px) {
+  .canvas-container {
+    border-right: none;
+    border-bottom: 1px solid #ddd;
+  }
 }
