--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,98 @@
-*{
-  user-select: none;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.game{
+body {
+  background-image: url("/bgImage.png");
+  height: 100vh;
+  /* overflow: hidden;  */
+}
+
+#root {
+  height: 100%;
+}
+
+.game {
   display: flex;
-  gap: 2rem;
+  gap: 0.25rem;
+  height: 80%;
 }
 
-.board{
+.board {
   width: 100%;
   height: 100%;
 }
 
-canvas{
+canvas {
   width: 100%;
-  height: 100%; 
-  border: 2px solid red;
+  height: 100%;
+  border: 2px solid black;
+  background-color: white;
 }
 
-.options{
+.options {
   display: flex;
+  background-color: white;
+  gap: 2rem;
 }
 
+.players {
+  display: flex;
+  flex-direction: column;
+  width: 15%;
+}
 
+.player {
+  display: flex;
+  background-color: white;
+  justify-content: space-between;
+  padding: 0.5rem;
+  border-bottom: 0.5px solid black;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+}
+
+.players:first-child {
+  border-top: 0.5px solid black;
+}
+
+.chatbox {
+  width: 30%;
+  display: flex;
+  height: 108%;
+  flex-direction: column;
+  background-color: white;
+}
+
+.chats {
+  height: 100%;
+  overflow-y: scroll;
+}
+
+.message {
+  padding: 0.5rem;
+  border-bottom: 0.5px solid black;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+  display: flex;
+  line-height: 1.25rem;
+}
+
+.chats:first-child{
+  border-top: 0.5px solid black;
+}
+
+.text{
+  display: flex;
+  height: 6%;
+}
+
+.text input{
+  width: 80%;
+  padding: 0.5rem;
+}
+
+.text button{
+  padding: 0.5rem;
+}
